Fix Sonar: change collect(toList()) to toList()